# pyiron_core

./: .gitignore  LICENSE  README.md  demos-extras-env.yml  jest.config.cjs  jest.config.js  local_postgres.zsh  package.json  project-env.yml  project.env  project.toml  pyproject.toml  tsconfig.json
.binder/: demo.ipynb  environment.yml  kernel.json  postBuild
.ci_support/: binder-env.yml
.github/workflows/: tests.yml
decisions/: 25-001-node-as-output.md  25-002-collapsed-vs-expanded-for-execution.md  25-003-graph-data-io.md  25-004-top-graph-is-truth.md
demo/: demo.ipynb
demo/demo_workflows/: elastic.json  grace_minimize.json  linearfit.json  phonons.json  water.json
devbooks/: workflow_ideas.ipynb
documentation/notebooks/: llm_doc.md  llm_doc_run.md  pwf_creator.py
js/: Checkbox.tsx  CustomNode.css  CustomNode.jsx  CustomNode.tsx  OptionalLiteralSelect.tsx  readme.md  useElkLayout.jsx  utils.ts  widget.jsx  widget.tsx
js/__tests__/: Checkbox.test.tsx  CustomNode.test.tsx  OptionalLiteralSelect.test.tsx  utils.test.tsx  widget.test.tsx
js/docs/: readme.md  readme_data_context.md  suggestions_and_imporovements.md
notebooks/: Calphad.ipynb  Code1.json  Gibbs.json  Gibbs_macro.json  README.md  ase_fit.json  assyst2.json  calphy.json  calphy3.json  cecam.ipynb  edges.json  elastic.json  elastic1.json  elastic_m3gnet.json  energy.json  executor.json  executor1.json  executor2.json  executor3.json  executor4.json  executorlib1.json  flow.json  flow_basics.ipynb  flow_debug.json  flow_expand.json  flow_macro.json  iterCellSize.json  kernel.ipynb  lammps.json  lammps_compressed.json  lammps_full.json  lammps_test.json  landau.json  landau2.json  linearfit.json  loops.json  minimize.json  murn3.json  murn4.json  murnaghan2.json  (+8 more)
notebooks/development/: Calphad.ipynb  Code1.json  Gibbs.json  Gibbs_macro.json  Murnaghan.json  ase_fit.json  assyst.json  assyst2.json  bulk.json  calphy.json  calphy2.json  calphy3.json  cecam.ipynb  db.json  elastic1.json  energy.json  executor.json  executor2.json  executor3.json  executor4.json  flow.json  flow_basics.ipynb  flow_debug.json  graph.json  (+16 more)
pyiron_core/: __init__.py  paths.py
pyiron_nodes/: __init__.py  controls.py  dev_tools.py  executors.py  math.py  plotting.py
pyiron_workflow/: __init__.py  _node_dataclass.py  _wf_graph.py  api.py  api_gui.py  data_fields.py  dev_tools.py  hash_based_storage.py  simple_workflow.py  util.py  wf_graph.py  wf_graph_tools.py
pyironflow/: __init__.py  pyironflow.py  reactflow.py  themes.py  treeview.py  wf_extensions.py
static/: widget.css
stored_workflows/: Murnaghan.json  assyst.json  bulk.json  calphy2.json  db.json  energy.json  executor.json  executor2.json  executor3.json  graph.json  linearfit.json  linearfit2.json  murn4.json  murnaghan.json  murnaghan2.json
(+198 files in other folders)
