[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
    "hatch-jupyter-builder>=0.5.0"
]
build-backend = "hatchling.build"

[project]
name = "pyiron_core"
description = "pyiron_core"
readme = "README.md"
keywords = ["pyiron"]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anywidget==0.9.18",
    "ase==3.24.0",
    "assyst==0.3.0",
    "bayesian-optimization==2.0.3",
    "black==25.1.0",
    "calphy==1.3.13",
    "cloudpickle==3.1.1",
    "grace-tensorpotential==0.5.1",
    "ipytree==0.2.2",
    "ipywidgets==8.1.6",
    "jupyterlab==4.4.1",
    "lammps==2024.8.29",
    "landau==1.3.4",
    "matgl==1.1.3",
    "matplotlib==3.10.0",
    "nglview==3.1.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "psycopg2==2.9.9",
    "pyiron_atomistics==0.7.18",
    "pyiron_base==0.14.3",
    "pyiron-data==0.0.30",
    "pyiron_lammps==0.4.1",
    "python-ace==0.3.1",
    "python-ternary==1.0.8",
    "pyxtal==1.1.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sqlalchemy==2.0.38",
    "structuretoolkit[pyxtal]==0.0.32",
    "traitlets==5.14.3",
]
dynamic = ["version"]
authors = [
    { name = "Joerg Neugebauer"}
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Repository = "https://github.com/pyiron/pyiron_core"


[tool.hatch.build]
only-packages = true
artifacts = [
    "pyiron_core/*",
    "static/*",
]

[tool.hatch.build.hooks.vcs]
version-file = "pyiron_core/_version.py"

[tool.hatch.version]
source = "vcs"
path = "pyiron_core/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "static/widget.js",
    "static/widget.css"
]
skip-if-exists = ["static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.black]
extend-exclude = '''
(
  ^/devbooks
  | ^/notebooks/development
)
'''

[tool.ruff]
exclude = [
    "notebooks/development/",
    "devbooks/",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way
"pyiron_core/pyiron_database/api.py" = ["F401"]
"pyiron_core/pyiron_workflow/api/*.py" = ["F401"]
"pyiron_core/pyironflow/api.py" = ["F401"]